@@ -25,7 +25,10 @@ jsoup changelog
   * Improvement: performance tweaks when parsing start tags, data, tables.
 
   * Improvement: added Element.nextElementSiblings() and Element.previousElementSiblings()
-    https://github.com/jhy/jsoup/pull/1054
+    <https://github.com/jhy/jsoup/pull/1054>
+
+  * Improvement: treat center tags as block tags.
+    <https://github.com/jhy/jsoup/pull/1113>
 
   * Bugfix: when converting a Jsoup document to a W3C DOM, if an element is namespaced but not in a defined namespace,
     set it to the global namespace.
